refactor: use hashicorp go-plugin (#25)
feat: refactor to use hashicorp go-plugin
