# proto/siren.swagger.yaml
@@ -7,6 +7,7 @@ info:
   version: "0.6"
 tags:
   - name: SirenService
+  - name: ProviderService
 schemes:
   - http
 consumes:
@@ -913,6 +914,28 @@ definitions:
         format: uint64
       silence_status:
         type: string
+      created_at:
+        type: string
+        format: date-time
+      updated_at:
+        type: string
+        format: date-time
+      group_key:
+        type: string
+      status:
+        type: string
+      annotations:
+        type: object
+        additionalProperties:
+          type: string
+      labels:
+        type: object
+        additionalProperties:
+          type: string
+      generator_url:
+        type: string
+      fingerprint:
+        type: string
   Any:
     type: object
     properties:
@@ -1294,6 +1317,8 @@ definitions:
       provider_namespace:
         type: string
         format: uint64
+  SetConfigResponse:
+    type: object
   Silence:
     type: object
     properties:
@@ -1363,6 +1388,8 @@ definitions:
         type: string
       updated_by:
         type: string
+  SyncRuntimeConfigResponse:
+    type: object
   Template:
     type: object
     properties:
@@ -1399,6 +1426,17 @@ definitions:
         type: string
       description:
         type: string
+  TransformToAlertsResponse:
+    type: object
+    properties:
+      alerts:
+        type: array
+        items:
+          type: object
+          $ref: '#/definitions/Alert'
+      firing_num:
+        type: string
+        format: uint64
   UpdateNamespaceResponse:
     type: object
     properties:
@@ -1447,6 +1485,8 @@ definitions:
       id:
         type: string
         format: uint64
+  UpsertRuleResponse:
+    type: object
   UpsertTemplateRequest:
     type: object
     properties:
